# UMI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  circle.yml  run.sh
cmake/: FindR.cmake  bcftools.cmake  bowtie.cmake  bowtie2.cmake  htslib.cmake  macs2.cmake  samtools.cmake  umitools.cmake  zlib.cmake
include/: BamAux.hpp  BamDedup.hpp  BamReader.hpp  Dedup.hpp  Kmer.hpp  SeqReader.hpp  TwoBit.hpp  Umi.hpp  UmiClipper.hpp  bam_dedup.hpp  bam_reader.hpp  umi.hpp  utils.hpp
src/: BamAux.cpp  CMakeLists.txt  SeqReader.cpp  TwoBit.cpp  Umi.cpp  UmiClipper.cpp  Utils.cpp  files.cmake
src/BamDedup/: BamDedup.cpp  BamDedupMain.cpp  CMakeLists.txt
src/BamReader/: BamReader.cpp
src/BamSort/: BamSortMain.cpp  CMakeLists.txt
src/ClipUmi/: CMakeLists.txt  ClipUmiMain.cpp
src/Coordinate/: Coordinate.cpp
src/Dedup/: Dedup.cpp
src/Kmer/: Kmer.cpp
src/Umi/: Umi.cpp  UmiClipper.cpp
src/bam_dedup/: CMakeLists.txt  bam_dedup.cpp  bam_dedup_main.cpp
src/bam_reader/: bam_reader.cpp
src/clip_umi/: CMakeLists.txt  clip_umi.cpp
src/phony/: CMakeLists.txt  README.md
src/seq_reader/: seq_reader.cpp
src/umi/: umi.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt
tests/bam_dedup_test/: CMakeLists.txt  main.cpp
tests/bam_pe_reader_test/: CMakeLists.txt  main.cpp
tests/bam_se_reader_test/: CMakeLists.txt  main.cpp
tests/data/: alldup.bam  alldup.out.bam  alldup.sam  pe.bam  tiny.bam  tiny.bam.bai  tiny.fq
tests/htslib_test/: CMakeLists.txt  main.cpp
tests/include/: data.hpp.in
tests/kmer_test/: CMakeLists.txt  main.cpp
tests/seq_reader_test/: CMakeLists.txt  main.cpp
tests/umiclip_test/: CMakeLists.txt  main.cpp
